<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="eKw-5D-0Y4">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="iQN-yY-fCy">
            <objects>
                <viewController id="eKw-5D-0Y4" customClass="ViewController" customModule="FastlaneExample" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="uo4-IC-9AL"/>
                        <viewControllerLayoutGuide type="bottom" id="R9w-cs-YCY"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="gG6-Ar-uSt">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="Tja-nn-2B5">
                                <rect key="frame" x="20" y="20" width="560" height="560"/>
                                <subviews>
                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CapitalOneFastLane" translatesAutoresizingMaskIntoConstraints="NO" id="rUS-Gm-tma">
                                        <rect key="frame" x="0.0" y="0.0" width="560" height="179"/>
                                    </imageView>
                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Logging in!!!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zF6-qj-rpa">
                                        <rect key="frame" x="0.0" y="179" width="560" height="0.0"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="sYF-WZ-yfj">
                                        <rect key="frame" x="0.0" y="325" width="560" height="60"/>
                                        <subviews>
                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8lr-Bf-VDa">
                                                <rect key="frame" x="0.0" y="0.0" width="560" height="30"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rby-Uw-uhU">
                                                        <rect key="frame" x="0.0" y="0.0" width="86" height="30"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JKq-ov-yL1">
                                                        <rect key="frame" x="86" y="0.0" width="474" height="30"/>
                                                        <accessibility key="accessibilityConfiguration" label="userName"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits"/>
                                                    </textField>
                                                </subviews>
                                            </stackView>
                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pwp-iP-jFd">
                                                <rect key="frame" x="0.0" y="30" width="560" height="30"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Jk-lo-IOH">
                                                        <rect key="frame" x="0.0" y="0.0" width="86" height="30"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2mB-pR-1WP">
                                                        <rect key="frame" x="86" y="0.0" width="474" height="30"/>
                                                        <accessibility key="accessibilityConfiguration" label="password"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits"/>
                                                    </textField>
                                                </subviews>
                                            </stackView>
                                        </subviews>
                                        <constraints>
                                            <constraint firstItem="rby-Uw-uhU" firstAttribute="width" secondItem="3Jk-lo-IOH" secondAttribute="width" id="R0k-yG-T4b"/>
                                        </constraints>
                                    </stackView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PBK-6d-I8c">
                                        <rect key="frame" x="0.0" y="530" width="560" height="30"/>
                                        <accessibility key="accessibilityConfiguration" label="login"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="38" id="z4B-pd-KcL"/>
                                        </constraints>
                                        <state key="normal" title="Login"/>
                                        <variation key="default">
                                            <mask key="constraints">
                                                <exclude reference="z4B-pd-KcL"/>
                                            </mask>
                                        </variation>
                                        <connections>
                                            <action selector="loginSelected:" destination="eKw-5D-0Y4" eventType="touchUpInside" id="6aT-aU-LHy"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <accessibility key="accessibilityConfiguration" label="loginView">
                            <bool key="isElement" value="NO"/>
                        </accessibility>
                        <constraints>
                            <constraint firstItem="Tja-nn-2B5" firstAttribute="top" secondItem="uo4-IC-9AL" secondAttribute="bottom" id="bkH-cb-HIw"/>
                            <constraint firstItem="Tja-nn-2B5" firstAttribute="centerY" secondItem="gG6-Ar-uSt" secondAttribute="centerY" id="jNr-TG-Xsw"/>
                            <constraint firstAttribute="leadingMargin" secondItem="Tja-nn-2B5" secondAttribute="leading" id="uvc-7c-ga0"/>
                            <constraint firstItem="Tja-nn-2B5" firstAttribute="trailing" secondItem="gG6-Ar-uSt" secondAttribute="trailingMargin" id="vUP-Am-XMA"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="statusLabel" destination="zF6-qj-rpa" id="STa-Ne-WZc"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="5dL-ck-DuH" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="912" y="611"/>
        </scene>
    </scenes>
    <resources>
        <image name="CapitalOneFastLane" width="800" height="179"/>
    </resources>
</document>
